Dismissable in Kotlin